add pip file to project and unsuccessfull  in using celery

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ django-rest-framework = "*"
 django-rest-framework-nested = "*"
 djoser = "*"
 drf-nested-routers = "*"
+redis = "*"
 
 [dev-packages]
 
